--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -7,6 +7,7 @@
     width: var(--default-layout-width);
     min-height: 1000px;
     display: flex;
+    margin-top: var(--default-layout-header-height);
 }
 .content {
     flex: 1;
