--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -7,4 +7,6 @@
     box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
     border-radius: 8px;
     overflow: hidden auto;
+    display: flex;
+    flex-direction: column;
 }
